学习materialize框架制作个人简介

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="row">
                 <ul id="staggered-test">
                     <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m2">
+                        <div class="col s6 m4 l2">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="images/ah.png">
@@ -183,14 +183,14 @@
                                         可在社交网络中分享你的历程。有全程语音反馈及数据云端存储。</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#!">This is a link</a>
-                                    <a href='#!'>This is a link</a>
+                                    <a href="#!">下载</a>
+
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m2">
+                        <div class="col s6 m4 l2">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="images/ah-2.jpg">
@@ -201,14 +201,14 @@
                                         ，以歌单、DJ节目、社交、地理位置为核心要素，主打发现和分享。</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#!">This is a link</a>
-                                    <a href='#!'>This is a link</a>
+                                    <a href="#!">下载</a>
+
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m2">
+                        <div class="col s6 m4 l2">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="images/ah-3.jpg">
@@ -221,14 +221,14 @@
                                     </p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#!">This is a link</a>
-                                    <a href='#!'>This is a link</a>
+                                    <a href="#!">下载</a>
+
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m2">
+                        <div class="col s6 m4 l2">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="images/ah-4.jpg">
@@ -239,14 +239,14 @@
                                         时增量式同步，并采用“三备份存储”技术，同时上线的还有网页剪报功能。</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#!">This is a link</a>
-                                    <a href='#!'>This is a link</a>
+                                    <a href="#!">下载</a>
+
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m2">
+                        <div class="col s6 m4 l2">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="images/ah-5.jpg">
@@ -258,14 +258,14 @@
                                         提供缩放、旋转、减切、颜色调整功能。</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#!">This is a link</a>
-                                    <a href='#!'>This is a link</a>
+                                    <a href="#!">下载</a>
+
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m2">
+                        <div class="col s6 m4 l2">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="images/ah-6.jpg">
@@ -277,8 +277,8 @@
                                         ，玩法更加丰富。30多个新奇有趣的障碍，不仅为关卡带来难度和挑战.</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#!">This is a link</a>
-                                    <a href='#!'>This is a link</a>
+                                    <a href="#!">下载</a>
+
                                 </div>
                             </div>
                         </div>
@@ -538,8 +538,11 @@
     ];
     Materialize.scrollFire(options);
 
-    $(".button-collapse").sideNav();
+    //$(".button-collapse").sideNav();
 
+</script>
+<script>
+    $(".button-collapse").sideNav();
 </script>
 </body>
 </html>
