学习materialize框架制作个人简介

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>个人简历</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="Plugins/dist/css/materialize.css">
     <link rel="stylesheet" href="css/index.css">
 
@@ -19,7 +20,9 @@
                 <a href="#!" class="brand-logo">
                     <img src="images/logo.png" class="img-responsive" alt="">
                 </a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu">123</i></a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse">
+                    <i class="material-icons">menu</i>
+                </a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <!--   <li><a href="#jbxx">基本信息</a></li>-->
                     <li><a href="#xxjl">学习经历</a></li>
@@ -34,6 +37,8 @@
                 </ul>
             </div>
         </nav>
+
+
 
     </div>
 </header>
@@ -62,12 +67,10 @@
                                     </div>
                                 </div>
                                 <div class="col l3 hide-on-small-only ">
-                                    <img class="right  " src="images/3.jpg" alt="">
-
+                                    <img class="right  " src="images/1.jpg" alt="">
                                 </div>
                             </div>
                         </div>
-
                     </li>
                     <li>
                         <div class="caption left-align left">
@@ -88,11 +91,9 @@
                                 </div>
                                 <div class="col l3 hide-on-small-only ">
                                     <img class="right  " src="images/2.jpg" alt=""><!---->
-
                                 </div>
                             </div>
                         </div>
-
                     </li>
                     <li>
                         <div class="caption right-align ">
@@ -113,14 +114,10 @@
                                 </div>
                                 <div class="col l3 hide-on-small-only ">
                                     <img class="right  " src="images/3.jpg" alt="">
-
                                 </div>
                             </div>
                         </div>
-
                     </li>
-
-
                 </ul>
             </div>
         </div>
@@ -168,7 +165,6 @@
         <!--个人爱好-->
         <div class="card-panel" id="grah">
             <span class=" purple-text text-accent-1 center "><h4>个人爱好</h4></span>
-
             <div class="row">
                 <ul id="staggered-test">
                     <li class="" style="transform: translateX(0px); opacity: 1;">
@@ -178,7 +174,8 @@
                                     <img src="images/ah.png">
                                 </div>
                                 <div class="card-content">
-                                    <p>联想出品的人气跑步运动软件。运用独有GPS算法，精确追踪运动路线；实时监测时速、配速等；准确计算卡路里燃烧。通过手机展现情况和数据统计；可在社交网络中分享你的历程。有全程语音反馈及数据云端存储。</p>
+                                    <p>
+                                        联想出品的人气跑步运动软件。运用独有GPS算法，精确追踪运动路线；实时监测时速、配速等；准确计算卡路里燃烧。通过手机展现情况和数据统计；可在社交网络中分享你的历程。有全程语音反馈及数据云端存储。</p>
                                 </div>
                                 <div class="card-action">
                                     <a href="#!">下载</a>
@@ -194,11 +191,11 @@
                                     <img src="images/ah-2.jpg">
                                 </div>
                                 <div class="card-content">
-                                    <p>网易云音乐是一款由网易开发的音乐产品，依托专业音乐人、DJ、好友推荐及社交功能，在线音乐服务主打歌单、社交、大牌推荐和音乐指纹，以歌单、DJ节目、社交、地理位置为核心要素，主打发现和分享。</p>
+                                    <p>
+                                        网易云音乐是一款由网易开发的音乐产品，依托专业音乐人、DJ、好友推荐及社交功能，在线音乐服务主打歌单、社交、大牌推荐和音乐指纹，以歌单、DJ节目、社交、地理位置为核心要素，主打发现和分享。</p>
                                 </div>
                                 <div class="card-action">
                                     <a href="#!">下载</a>
-
                                 </div>
                             </div>
                         </div>
@@ -211,11 +208,11 @@
                                     <span class="card-title"></span>
                                 </div>
                                 <div class="card-content">
-                                    <p>有道词典是由网易有道出品的全球首款基于搜索引擎技术的全能免费语言翻译软件，提供优质顺畅的查词翻译服务。现已实现全平台覆盖，是全国最好用的免费互联网词典翻译工具，也是最受用户欢迎的词典软件。</p>
+                                    <p>
+                                        有道词典是由网易有道出品的全球首款基于搜索引擎技术的全能免费语言翻译软件，提供优质顺畅的查词翻译服务。现已实现全平台覆盖，是全国最好用的免费互联网词典翻译工具，也是最受用户欢迎的词典软件。</p>
                                 </div>
                                 <div class="card-action">
                                     <a href="#!">下载</a>
-
                                 </div>
                             </div>
                         </div>
@@ -227,7 +224,8 @@
                                     <img src="images/ah-4.jpg">
                                 </div>
                                 <div class="card-content">
-                                    <p>有道云笔记是2011年6月28日网易旗下的有道推出的个人与团队的线上资料库,支持多种附件格式，拥有2G容量的初始免费存储空间，能够实时增量式同步，并采用“三备份存储”技术，同时上线的还有网页剪报功能。</p>
+                                    <p>
+                                        有道云笔记是2011年6月28日网易旗下的有道推出的个人与团队的线上资料库,支持多种附件格式，拥有2G容量的初始免费存储空间，能够实时增量式同步，并采用“三备份存储”技术，同时上线的还有网页剪报功能。</p>
                                 </div>
                                 <div class="card-action">
                                     <a href="#!">下载</a>
@@ -243,7 +241,8 @@
                                     <img src="images/ah-5.jpg">
                                 </div>
                                 <div class="card-content">
-                                    <p>FastStone Capture支持包括BMP、JPEG、JPEG 2000、GIF、PNG、PCX、TIFF、WMF、ICO和TGA在内的所有主流图片格式，其独有的光滑和毛刺处理技术让图片更加清晰，提供缩放、旋转、减切、颜色调整功能。</p>
+                                    <p>FastStone Capture支持包括BMP、JPEG、JPEG
+                                        2000、GIF、PNG、PCX、TIFF、WMF、ICO和TGA在内的所有主流图片格式，其独有的光滑和毛刺处理技术让图片更加清晰，提供缩放、旋转、减切、颜色调整功能。</p>
                                 </div>
                                 <div class="card-action">
                                     <a href="#!">下载</a>
@@ -260,11 +259,11 @@
 
                                 </div>
                                 <div class="card-content">
-                                    <p>《开心消消乐》拥有超过900个精心设计的关卡，及5大关卡类型。掉落收集、指定消除、限时关卡……在传统三消玩法基础上，还添加了多种任务目标，玩法更加丰富。30多个新奇有趣的障碍，不仅为关卡带来难度和挑战.</p>
+                                    <p>
+                                        《开心消消乐》拥有超过900个精心设计的关卡，及5大关卡类型。掉落收集、指定消除、限时关卡……在传统三消玩法基础上，还添加了多种任务目标，玩法更加丰富。30多个新奇有趣的障碍，不仅为关卡带来难度和挑战.</p>
                                 </div>
                                 <div class="card-action">
                                     <a href="#!">下载</a>
-
                                 </div>
                             </div>
                         </div>
@@ -272,6 +271,7 @@
                 </ul>
             </div>
         </div>
+
         <!--参与项目-->
         <div class="card-panel" id="cyxm">
             <span class=" purple-text text-accent-1 center "><h4>参与项目</h4></span>
@@ -349,16 +349,18 @@
                 <div class="col s12 m6 hoverable">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/xm1.png">
+                            <img class="activator" src="images/xm3.png">
                         </div>
                         <div class="card-content">
-       <span class="card-title activator grey-text text-darken-4">定西生活网设计方案 <i
-               class="mdi-navigation-more-vert right"></i></span>
+                            <span class="card-title activator grey-text text-darken-4">定西生活网设计方案
+                                <i class="mdi-navigation-more-vert right"></i>
+                            </span>
                             <p><a target="_blank" href="#！">定西生活网示例</a></p>
                         </div>
                         <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">定西生活网设计方案 <i
-                        class="mdi-navigation-close right"></i></span>
+                             <span class="card-title grey-text text-darken-4">定西生活网设计方案
+                                 <i class="mdi-navigation-close right"></i>
+                             </span>
                             <p class="flow-text">
 
                                 需求分析
@@ -385,13 +387,15 @@
                             <img class="activator" src="images/xm1.png">
                         </div>
                         <div class="card-content">
-       <span class="card-title activator grey-text text-darken-4">定西生活网设计方案 <i
-               class="mdi-navigation-more-vert right"></i></span>
+                            <span class="card-title activator grey-text text-darken-4">定西生活网设计方案
+                                <i class="mdi-navigation-more-vert right"></i>
+                            </span>
                             <p><a target="_blank" href="#！">定西生活网示例</a></p>
                         </div>
                         <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">定西生活网设计方案 <i
-                        class="mdi-navigation-close right"></i></span>
+                             <span class="card-title grey-text text-darken-4">定西生活网设计方案
+                                 <i class="mdi-navigation-close right"></i>
+                             </span>
                             <p class="flow-text">
 
                                 需求分析
@@ -417,16 +421,18 @@
                 <div class="col s12 m6 hoverable">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/xm1.png">
+                            <img class="activator" src="images/xm2.png">
                         </div>
                         <div class="card-content">
-       <span class="card-title activator grey-text text-darken-4">定西生活网设计方案 <i
-               class="mdi-navigation-more-vert right"></i></span>
+                            <span class="card-title activator grey-text text-darken-4">定西生活网设计方案
+                                <i class="mdi-navigation-more-vert right"></i>
+                            </span>
                             <p><a target="_blank" href="#！">定西生活网示例</a></p>
                         </div>
                         <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">定西生活网设计方案 <i
-                        class="mdi-navigation-close right"></i></span>
+                             <span class="card-title grey-text text-darken-4">定西生活网设计方案
+                                 <i class="mdi-navigation-close right"></i>
+                             </span>
                             <p class="flow-text">
 
                                 需求分析
@@ -450,16 +456,18 @@
                 <div class="col s12 m6 hoverable">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/xm1.png">
+                            <img class="activator" src="images/xm3.png">
                         </div>
                         <div class="card-content">
-       <span class="card-title activator grey-text text-darken-4">定西生活网设计方案 <i
-               class="mdi-navigation-more-vert right"></i></span>
+                             <span class="card-title activator grey-text text-darken-4">定西生活网设计方案
+                                 <i class="mdi-navigation-more-vert right"></i>
+                             </span>
                             <p><a target="_blank" href="#！">定西生活网示例</a></p>
                         </div>
                         <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">定西生活网设计方案 <i
-                        class="mdi-navigation-close right"></i></span>
+                             <span class="card-title grey-text text-darken-4">定西生活网设计方案
+                                 <i class="mdi-navigation-close right"></i>
+                             </span>
                             <p class="flow-text">
 
                                 需求分析
