学习materialize框架制作个人简介

--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
                 </ul>
             </div>
         </nav>
-
-
-
     </div>
 </header>
 
@@ -47,7 +44,7 @@
     <div class="container">
         <!--图片轮播-->
         <div class="home-color">
-            <div class="slider tplp  ">
+            <div class="slider  ">
                 <ul class="slides ">
                     <li>
                         <div class="caption center-align ">
@@ -56,13 +53,9 @@
                                     <div class="left"><!---->
                                         <h3>Right Aligned Caption</h3>
                                         <h5 class=" light grey-text text-lighten-3">Here's our small slogan.
-                                            Here's our small sloganHere's our small sloganHere's our small sloganHere's
-                                            our
-                                            small slogan
-                                            Here's our small sloganHere's our small sloganHere's our small slogan
-                                            Here's our small slogan
-                                            Here's our small slogan
-                                            Here's our small slogan
+                                            Here's our small sloganHere's our small sloganHere's our small sloganHere'sour
+                                            small slogan Here's our small sloganHere's our small sloganHere's our small slogan
+                                            Here's our small slogan Here's our small slogan Here's our small slogan
                                         </h5>
                                     </div>
                                 </div>
@@ -121,7 +114,6 @@
                 </ul>
             </div>
         </div>
-
         <!--学历经历-->
         <div class="card-panel hoverable" id="xxjl">
             <span class=" purple-text text-accent-1 center "><h4>学习经历</h4></span>
@@ -164,11 +156,11 @@
 
         <!--个人爱好-->
         <div class="card-panel" id="grah">
-            <span class=" purple-text text-accent-1 center "><h4>个人爱好</h4></span>
+            <span class="center "><h4>个人爱好</h4></span>
             <div class="row">
                 <ul id="staggered-test">
-                    <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m4 l2">
+                    <li class="" style="transform: translateX(0px); opacity: 0;">
+                        <div class="col s6 m6 l3">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="images/ah.png">
@@ -184,8 +176,8 @@
                             </div>
                         </div>
                     </li>
-                    <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m4 l2">
+                    <li class="" style="transform: translateX(0px); opacity: 0;">
+                        <div class="col s6 m6 l3">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="images/ah-2.jpg">
@@ -200,8 +192,8 @@
                             </div>
                         </div>
                     </li>
-                    <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m4 l2">
+                    <li class="" style="transform: translateX(0px); opacity: 0;">
+                        <div class="col s6 m6 l3">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="images/ah-3.jpg">
@@ -217,8 +209,8 @@
                             </div>
                         </div>
                     </li>
-                    <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m4 l2">
+                    <li class="" style="transform: translateX(0px); opacity: 0;">
+                        <div class="col s6 m6 l3">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="images/ah-4.jpg">
@@ -230,40 +222,6 @@
                                 <div class="card-action">
                                     <a href="#!">下载</a>
 
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m4 l2">
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="images/ah-5.jpg">
-                                </div>
-                                <div class="card-content">
-                                    <p>FastStone Capture支持包括BMP、JPEG、JPEG
-                                        2000、GIF、PNG、PCX、TIFF、WMF、ICO和TGA在内的所有主流图片格式，其独有的光滑和毛刺处理技术让图片更加清晰，提供缩放、旋转、减切、颜色调整功能。</p>
-                                </div>
-                                <div class="card-action">
-                                    <a href="#!">下载</a>
-
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="" style="transform: translateX(0px); opacity: 1;">
-                        <div class="col s6 m4 l2">
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="images/ah-6.jpg">
-
-                                </div>
-                                <div class="card-content">
-                                    <p>
-                                        《开心消消乐》拥有超过900个精心设计的关卡，及5大关卡类型。掉落收集、指定消除、限时关卡……在传统三消玩法基础上，还添加了多种任务目标，玩法更加丰富。30多个新奇有趣的障碍，不仅为关卡带来难度和挑战.</p>
-                                </div>
-                                <div class="card-action">
-                                    <a href="#!">下载</a>
                                 </div>
                             </div>
                         </div>
